--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/public/sushi.png">
+    <link rel="icon" type="image/png" href="./public/sushi.png">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sushiman</title>
@@ -118,19 +118,19 @@
                 All
             </button>
             <button class="popular-foods__filter-btn">
-                <img src="/assets/sushi-9.png" alt="sushi 9">
+                <img src="./assets/sushi-9.png" alt="sushi 9">
                 Sushi
             </button>
             <button class="popular-foods__filter-btn">
-                <img src="/assets/sushi-8.png" alt="sushi 8">
+                <img src="./assets/sushi-8.png" alt="sushi 8">
                 Ramen
             </button>
             <button class="popular-foods__filter-btn">
-                <img src="/assets/sushi-7.png" alt="sushi 7">
+                <img src="./assets/sushi-7.png" alt="sushi 7">
                 Udon
             </button>
             <button class="popular-foods__filter-btn">
-                <img src="/assets/sushi-6.png" alt="sushi 6">
+                <img src="./assets/sushi-6.png" alt="sushi 6">
                 Danggo
             </button>
             <button class="popular-foods__filter-btn">
