--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
             </article>
         </div>
-        <button class="popular-foods__button" data-aos="fade-right">
+        <button class="popular-foods__button" data-aos="fade-left">
             Explore Food
             <img src="assets/arrow-right.svg" alt="arrow-right">
         </button>
